# KnapFormer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
knapformer/: __init__.py  sequence_balancer.py  workload_estimator.py
knapformer/simulator/: __init__.py  simulate.py  simulator_data.py  simulator_model.py
knapformer/tests/: __init__.py  test_transformer.py
knapformer/utils/: ddp_barrier.py  mmdit_utils.py
scripts/: __init__.py  experiment_launcher.py  experiment_template.sh
simulator/: simulate.py  simulator_data.py  simulator_model.py
tests/: test_transformer.py
utils/: ddp_barrier.py  fsdp_utils.py  mmdit_utils.py  perf_utils.py  transformer_utils.py
visualization/: route_visualization.py  routing_plan.json
